config/gateway/root/namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: gateway
  labels:
    istio-injection: enabled
